Refactor with syn

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/yanganto/test-with"
 proc-macro = true
 
 [dependencies]
-regex = "1"
+syn = { version = "1.0.84", features = [ "full" ] }
 proc-macro2 = "1.0.36"
 proc-macro-error = "1.0.4"
+quote = "1.0.14"
