--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ proc-macro-error = "1.0.4"
 proc-macro2 = "1.0.36"
 quote = "1.0.14"
 syn = { version = "1.0.84", features = [ "full" ] }
+reqwest = { version = "0.11", features = ["blocking"] }
