--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,5 @@ proc-macro2 = "1.0.36"
 quote = "1.0.14"
 syn = { version = "1.0.85", features = [ "full" ] }
 reqwest = { version = "0.11", features = ["blocking"] }
-icmp = "0.3.0"
+ping = "0.3.0"
 regex = "1"
