--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "test-with"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Antonio Yang <yanganto@gmail.com>"]
 edition = "2021"
 license = "MIT"
 description = "A lib help you run test with condition"
 repository = "https://github.com/yanganto/test-with"
+keywords = [ "testing", "environment", "condition", "toggle", "integration" ]
+categories = [ "development-tools", "testing" ]
 
 [lib]
 proc-macro = true
