--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test-with"
-version = "0.3.2"
+version = "0.4.0"
 authors = ["Antonio Yang <yanganto@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -16,7 +16,7 @@ proc-macro = true
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0.36"
 quote = "1.0.14"
-syn = { version = "1.0.85", features = [ "full" ] }
+syn = { version = "1.0.85", features = [ "full", "extra-traits" ] }
 reqwest = { version = "0.11", features = ["blocking"] }
 ping = "0.3.0"
 regex = "1"
