--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,5 +23,5 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
 
-      - name: Publish cargo-sewup crate
+      - name: Publish Crate
         run: nix develop -c 'crate-publish' cargo-sewup ${{ secrets.CARGO_REGISTRY_TOKEN }}
