--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ proc-macro = true
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0.36"
 quote = "1.0.14"
-syn = { version = "1.0.85", features = [ "full", "extra-traits" ] }
+syn = { version = "1.0.85", features = [ "full" ] }
 reqwest = { version = "0.11", features = ["blocking"] }
 ping = "0.3.0"
 regex = "1"
