Implement `ign-msg` feature for working around with the message

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
 
-      - name: Example test
-        run: nix develop -c cargo test --examples
+      - name: Example test in features
+        run: nix develop -c feature-test
