--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ proc-macro = true
 
 [dependencies]
 proc-macro-error = "1.0.4"
-proc-macro2 = "1.0.36"
+proc-macro2 = { version = "1.0.36", optional = true }
 quote = "1.0.14"
 syn = { version = "1.0.85", features = [ "full" ] }
 reqwest = { version = "0.11", features = ["blocking"] }
 ping = "0.3.0"
 regex = "1"
+
+[features]
+ign-msg = [ "proc-macro2" ]
