--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ reqwest = { version = "0.11", features = ["blocking"] }
 ping = "0.3.0"
 regex = "1"
 tokio = { version = "1.15.0", features = ["rt", "macros"], optional = true }
+users = "0.11.0"
 
 [features]
 ign-msg = []
