--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ ping = "0.3.0"
 regex = "1"
 tokio = { version = "1.15.0", features = ["rt", "macros"], optional = true }
 users = "0.11.0"
+sysinfo = "0.23.5"
+byte-unit = "4.0.13"
 
 [features]
 ign-msg = []
