--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tokio = { version = "1.15.0", features = ["rt", "macros"], optional = true }
 users = "0.11.0"
 sysinfo = "0.23.5"
 byte-unit = "4.0.13"
+num_cpus = "1.13.1"
 
 [features]
 ign-msg = []
