--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 **/*.rs.bk
 .envrc
 .direnv/
+# The library shouldn't decide about the exact versions of 
+# its dependencies, but let the downstream crate decide.
+Cargo.lock
