--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,12 @@ syn = { version = "1.0.85", features = [ "full" ] }
 reqwest = { version = "0.11", features = ["blocking"] }
 ping = "0.3.0"
 regex = "1"
-users = "0.11.0"
 sysinfo = "0.23.5"
 byte-unit = "4.0.13"
 num_cpus = "1.13.1"
+
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+users = "0.11.0"
 
 [features]
 ign-msg = []
