--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,6 @@ syn = { version = "1.0.85", features = [ "full" ] }
 reqwest = { version = "0.11", features = ["blocking"] }
 ping = "0.3.0"
 regex = "1"
-tokio = { version = "1.15.0", features = ["rt", "macros"], optional = true }
 users = "0.11.0"
 sysinfo = "0.23.5"
 byte-unit = "4.0.13"
@@ -28,4 +27,6 @@ num_cpus = "1.13.1"
 
 [features]
 ign-msg = []
-example = ["tokio"]
+
+[dev-dependencies]
+tokio = { version = "1.15.0", features = ["rt", "macros"] }
