--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,22 +13,27 @@ categories = [ "development-tools", "testing" ]
 proc-macro = true
 
 [dependencies]
-proc-macro-error = "1.0.4"
-proc-macro2 = "1.0.36"
-quote = "1.0.14"
-syn = { version = "1.0.85", features = [ "full" ] }
-reqwest = { version = "0.11", features = ["blocking"] }
-ping = "0.3.0"
-regex = "1"
-sysinfo = "0.23.5"
-byte-unit = "4.0.13"
-num_cpus = "1.13.1"
+proc-macro-error = "1.0"
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = { version = "1.0", features = [ "full" ] }
+regex = { version = "1" }
+
+reqwest = { version = "0.11", features = ["blocking"], optional = true }
+ping = { version = "0.3", optional = true }
+sysinfo = { version = "0.23", optional = true }
+byte-unit = { version = "4.0", optional = true }
+num_cpus = { version = "1.13", optional = true }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
-users = "0.11.0"
+users = { version = "0.11.0", optional = true }
 
 [features]
+default = ["net", "resource", "user"]
 ign-msg = []
+net = ["reqwest", "ping"]
+resource = ["sysinfo", "byte-unit", "num_cpus"]
+user = ["users"]
 
 [dev-dependencies]
 tokio = { version = "1.15.0", features = ["rt", "macros"] }
