Make PR after dependency updated

--- a/.github/workflows/dep_check.yml
+++ b/.github/workflows/dep_check.yml
@@ -26,20 +26,15 @@ jobs:
       - name: Update dependency
         run: nix develop -c 'update-dependency'
 
-  make_pr:
-    needs: update_dependency
-    name: Make PR for updating dependency
-    runs-on: ubuntu-latest
-
-    steps:
       - uses: actions/checkout@v3
-      - name: Create commit
+
+      - name: Commit
         run: |
           git config user.name 'Antonio Yang'
           git config user.email 'yanganto@gmail.com'
           git add Cargo.toml
           git commit -m "Update dependency"
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
+
+      - uses: peter-evans/create-pull-request@v4
         with:
           reviewers: yanganto
