--- a/.github/workflows/dep_check.yml
+++ b/.github/workflows/dep_check.yml
@@ -24,20 +24,17 @@ jobs:
           nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Update dependency
+        id: update-dependency
         run: nix develop -c 'update-dependency'
 
-  make_pr:
-    needs: update_dependency
-    name: Make PR for updating dependency
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Create commit
+        if: failure() && steps.update-dependency.outcome != 'success'
         run: |
           git config user.name 'Antonio Yang'
           git config user.email 'yanganto@gmail.com'
           git add Cargo.toml
           git commit -m "Update dependency"
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
