--- a/.github/workflows/dep_check.yml
+++ b/.github/workflows/dep_check.yml
@@ -42,3 +42,5 @@ jobs:
         with:
           reviewers: yanganto
           base: main
+          branch: dependency-update
+          branch-suffix: timestamp
