Modify titile and message

--- a/.github/workflows/dep_check.yml
+++ b/.github/workflows/dep_check.yml
@@ -36,3 +36,5 @@ jobs:
           base: main
           branch: dependency-update
           branch-suffix: timestamp
+          title: "Dependency Update"
+          commit-message: "automated dependency update"
