--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test-with"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["Antonio Yang <yanganto@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -25,7 +25,6 @@ sysinfo = { version = "0.27", optional = true }
 byte-unit = { version = "4.0", optional = true }
 num_cpus = { version = "1.13", optional = true }
 which = { version = "4.3", optional = true }
-is_executable = { version = "1.0", optional = true }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 users = { version = "0.11", optional = true }
@@ -36,7 +35,7 @@ ign-msg = []
 net = ["reqwest", "ping"]
 resource = ["sysinfo", "byte-unit", "num_cpus"]
 user = ["users"]
-executable = ["which", "is_executable"]
+executable = ["which"]
 
 [dev-dependencies]
 tokio = { version = "1.15.0", features = ["rt", "macros"] }
