--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test-with"
-version = "0.9.2"
+version = "0.9.3"
 authors = ["Antonio Yang <yanganto@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -32,7 +32,11 @@ users = { version = "0.11", optional = true }
 [features]
 default = ["net", "resource", "user", "executable"]
 ign-msg = []
-net = ["reqwest", "ping"]
+
+net = ["http", "icmp"]
+http = ["reqwest"]
+icmp = ["ping"]
+
 resource = ["sysinfo", "byte-unit", "num_cpus"]
 user = ["users"]
 executable = ["which"]
