--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 # The library shouldn't decide about the exact versions of 
 # its dependencies, but let the downstream crate decide.
 Cargo.lock
+examples/runner/target
