--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,15 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: cachix/install-nix-action@v15
-        with:
-          nix_path: nixpkgs=channel:nixos-unstable
-
-      - name: Install typos
-        run: nix develop -c 'cargo' install typos-cli
-
-      - name: Check typo
-        run: nix develop -c 'typos' --exclude ssvm-evmc
+      - name: Check spelling of file.txt
+        uses: crate-ci/typos@master
 
       - name: Super-Linter
         uses: github/super-linter@v4
