--- a/examples/runner/Cargo.toml
+++ b/examples/runner/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 test-with = { path = "../../", features = ["runtime"] }
-libtest-with = "0.6.1-0"
+libtest-with = { version = "0.6.1-1", features = ["net", "resource", "user", "executable"]}
