fix test dependency

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,6 @@ jobs:
 
       - name: Example test in features
         run: nix develop -c feature-test
+
+      - name: Cargo test
+        run: nix develop -c cargo test --all-features
