--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ num_cpus = { version = "1.13", optional = true }
 which = { version = "5.0", optional = true }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
-users = { version = "0.11", optional = true }
+uzers = { version = "0.11.3", optional = true }
 
 [features]
 default = ["net", "resource", "user", "executable"]
@@ -39,7 +39,7 @@ http = ["reqwest"]
 icmp = ["ping"]
 
 resource = ["sysinfo", "byte-unit", "num_cpus"]
-user = ["users"]
+user = ["uzers"]
 executable = ["which"]
 
 [dev-dependencies]
