--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test-with"
-version = "0.15.6"
+version = "0.15.7"
 authors = ["Antonio Yang <yanganto@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -20,9 +20,9 @@ quote = "1.0"
 syn = { version = "2.0", features = [ "full" ] }
 regex = { version = "1" }
 
-reqwest = { version = "0.13.0-rc", features = ["blocking"], optional = true }
+reqwest = { version = "0.13", features = ["blocking"], optional = true }
 ping = { version = "0.7.1-beta", optional = true }
-sysinfo = { version = "0.37", optional = true }
+sysinfo = { version = "0.38", optional = true }
 byte-unit = { version = "5.0", optional = true }
 num_cpus = { version = "1.13", optional = true }
 which = { version = "8.0", optional = true }
@@ -48,5 +48,5 @@ timezone = ["chrono"]
 [dev-dependencies]
 tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
 serial_test = "3.1.1"
-libtest-with = { version = "0.8.1-12", features = ["net", "resource", "user", "executable", "timezone"] }
+libtest-with = { version = "0.8.1-13", features = ["net", "resource", "user", "executable", "timezone"] }
 rstest = "0.26.1"
